# galena

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  build.roc  build.sh  flake.nix  main.roc  rust-toolchain.toml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  main.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/galena_cli/: Cargo.toml  build.rs
crates/galena_cli/src/: main.rs
crates/galena_cli/templates/: index.html
crates/roc_app/src/: aarch64.rs  lib.rs  wasm32.rs  x86.rs  x86_64.rs
crates/roc_backend_host/: Cargo.toml
crates/roc_backend_host/src/: roc.rs  server.rs
crates/roc_backend_host_bin/: Cargo.toml
crates/roc_backend_host_lib/: Cargo.toml
crates/roc_frontend_host/: Cargo.toml
crates/roc_frontend_host/src/: lib.rs  roc.rs  ws.rs
crates/roc_host/: Cargo.toml
crates/roc_host/src/: lib.rs  roc.rs  server.rs
crates/roc_host/static/: main.js
examples/: ability_test.roc  captures.roc  counter.roc  greet.roc  hello_world  hello_world.roc
frontend/: index.html  package.json
frontend/src/: app.ts  dom.ts  main.ts  ws.ts
nix/: wasilibc.nix
platform/: Backend.roc  BackendInternal.roc  Cargo.toml  Cmd.roc  Frontend.roc  Host.roc  Html.roc  InternalBackend.roc  InternalFrontend.roc  InternalView.roc  Json.roc  View.roc  build.sh  glue.roc  host.js  host.zig  libapp  libapp.roc  main.roc  main.rocl  socket.js
platform/Internal/: Attr.roc  Frontend.roc  Html.roc  View.roc
platform/glue/: result.zig
platform/ts/: app.ts  util.ts  ws.ts
scripts/: build.roc
