[workspace]
members = [
  "crates/roc_backend_host",
  "crates/roc_backend_host_bin",
  "crates/roc_backend_host_lib",
  "crates/roc_frontend_host",
  "crates/galena_cli",
  "crates/roc_app",
]
resolver = "2"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
roc_std = { git = "https://github.com/roc-lang/roc.git", rev = "e8ff787c74473085a98f39d6725dbc260817b467" }
anyhow = "1.0.98"
