[package]
name = "galena_cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
roc_std.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
include_dir = "0.7"
notify = "6.1.1"

