[package]
name = "frontend_host"
version = "0.0.1"
edition = "2021"

[lib]
name = "frontend_host"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
roc_std.workspace = true
anyhow.workspace = true
libc = "0.2"
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "Text",
  "Window",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "Location",
] }
